--- a/0、前端面试题.md
+++ b/0、前端面试题.md
@@ -1,9 +1,18 @@
  
 
-```
+```javascript
 if (!Array.isArray) {
   Array.isArray = function(arg) {
     return Object.prototype.toString.call(arg) === '[object Array]';
   };
 }
+```
+
+```javascript
+// 如何实现一个数组的去重
+Array.prototype.unique = function() {
+  return Array.from(new Set(this));
+}
+var temp = [1,1,2,2,33,'33',44,'44']
+temp.unique()   // [1, 2, 33, "33", 44, "44"]
 ```
